[gd_scene load_steps=2 format=2]

[ext_resource path="res://Scripts/Dialogs/CreateNewImage.gd" type="Script" id=1]

[node name="CreateNewImage" type="ConfirmationDialog"]
margin_right = 200.0
margin_bottom = 70.0
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 8.0
margin_top = 8.0
margin_right = 192.0
margin_bottom = 34.0

[node name="ImageSize" type="Label" parent="VBoxContainer"]
margin_right = 184.0
margin_bottom = 15.0
text = "Image Size"

[node name="OptionsContainer" type="GridContainer" parent="VBoxContainer"]
margin_top = 19.0
margin_right = 184.0
margin_bottom = 76.0
custom_constants/vseparation = 4
custom_constants/hseparation = 2
columns = 2

[node name="WidthLabel" type="Label" parent="VBoxContainer/OptionsContainer"]
margin_top = 1.0
margin_right = 75.0
margin_bottom = 16.0
text = "Width:"

[node name="WidthValue" type="SpinBox" parent="VBoxContainer/OptionsContainer"]
margin_left = 75.0
margin_right = 139.0
margin_bottom = 17.0
mouse_default_cursor_shape = 2
min_value = 1.0
max_value = 16384.0
value = 64.0
suffix = "px"

[node name="Height" type="Label" parent="VBoxContainer/OptionsContainer"]
margin_top = 19.0
margin_right = 75.0
margin_bottom = 33.0
text = "Height:"

[node name="HeightValue" type="SpinBox" parent="VBoxContainer/OptionsContainer"]
margin_left = 75.0
margin_top = 19.0
margin_right = 139.0
margin_bottom = 34.0
mouse_default_cursor_shape = 2
min_value = 1.0
max_value = 16384.0
value = 64.0
suffix = "px"

[node name="FillColorLabel" type="Label" parent="VBoxContainer/OptionsContainer"]
margin_top = 41.0
margin_right = 75.0
margin_bottom = 53.0
text = "Fill with color:"

[node name="FillColor" type="ColorPickerButton" parent="VBoxContainer/OptionsContainer"]
margin_left = 75.0
margin_top = 38.0
margin_right = 139.0
margin_bottom = 57.0
rect_min_size = Vector2( 64, 20 )
color = Color( 0, 0, 0, 0 )
[connection signal="about_to_show" from="." to="." method="_on_CreateNewImage_about_to_show"]
[connection signal="confirmed" from="." to="." method="_on_CreateNewImage_confirmed"]
